Fix permission for user view.

--- a/config/sync/views.view.users.yml
+++ b/config/sync/views.view.users.yml
@@ -1984,6 +1984,11 @@ display:
           plugin_id: standard
       defaults:
         sorts: false
+        access: false
+      access:
+        type: perm
+        options:
+          perm: 'access user profiles'
     cache_metadata:
       max-age: -1
       contexts:
