--- a/config/sync/system.maintenance.yml
+++ b/config/sync/system.maintenance.yml
@@ -1,4 +1,4 @@
-message: '@site დროებით გამორთულია. ჩვენ მალე დავბრუნდებით, გმადლობთ მოთმინებისთის.'
+message: 'მიმდინარეობს ხმების დათვლა, მადლობას გიხდით მოთმინებისთვის.'
 langcode: ka
 _core:
   default_config_hash: Z5MXifrF77GEAgx0GQ6iWT8wStjFuY8BD9OruofWTJ8
