--- a/config/sync/config_split.config_split.dev.yml
+++ b/config/sync/config_split.config_split.dev.yml
@@ -10,8 +10,11 @@ module:
   devel: 0
   devel_generate: 0
   kint: 0
+  stage_file_proxy: 0
 theme: {  }
-blacklist: {  }
+blacklist:
+  - om_site_settings.site_settings
+  - sendgrid_integration.settings
 graylist: {  }
 graylist_dependents: true
 graylist_skip_equal: true
