Create and put block on top. refs #706

--- a/config/sync/block.block.leadpartner.yml
+++ b/config/sync/block.block.leadpartner.yml
@@ -3,7 +3,7 @@ langcode: ka
 status: false
 dependencies:
   module:
-    - girchi_utils
+    - girchi_leaderboard
   theme:
     - girchi
 id: leadpartner
