Move api key to env.

--- a/web/modules/custom/girchi_sms/girchi_sms.services.yml
+++ b/web/modules/custom/girchi_sms/girchi_sms.services.yml
@@ -5,4 +5,4 @@ services:
 
   girchi_sms.sms_sender:
     class: Drupal\girchi_sms\SmsSender
-    arguments: ['@logger.factory', '@entity_type.manager', '@girchi_sms.utils','@http_client']
+    arguments: ['@logger.factory', '@entity_type.manager', '@girchi_sms.utils','@http_client','@module_handler']
