--- a/composer.json
+++ b/composer.json
@@ -256,6 +256,7 @@
     "drupal/paragraphs": "^1.6",
     "drupal/pathauto": "^1.3",
     "drupal/prlp": "^1.4",
+    "drupal/queue_ui": "^2.0",
     "drupal/recaptcha": "^2.3",
     "drupal/redirect": "^1.0@beta",
     "drupal/reference_value_pair": "^1.2",
