Improve rank rating.

--- a/web/modules/custom/girchi_utils/girchi_utils.services.yml
+++ b/web/modules/custom/girchi_utils/girchi_utils.services.yml
@@ -4,4 +4,4 @@ services:
     arguments: ['@entity_type.manager']
   girchi_utils.ged_raiting:
     class: Drupal\girchi_utils\GedRaitingService
-    arguments: ['@entity_type.manager']
+    arguments: ['@database','@logger.factory']
