Optimization of girchi-ged-transactions cron.

--- a/web/modules/custom/girchi_ged_transactions/girchi_ged_transactions.services.yml
+++ b/web/modules/custom/girchi_ged_transactions/girchi_ged_transactions.services.yml
@@ -4,4 +4,4 @@ services:
     arguments: ['@database']
   girchi_ged_transactions.summarygedcalculation:
     class: Drupal\girchi_ged_transactions\SummaryGedCalculationService
-    arguments: ['@entity_type.manager','@logger.factory']
+    arguments: ['@logger.factory', '@database']
